--- a/grafok/dfs1.tex
+++ b/grafok/dfs1.tex
@@ -6,10 +6,18 @@
 \begin{document}
 \begin{tikzpicture}
 \begin{scope}
-		[every node/.style={draw,circle,inner sep = 0em, minimum size = 0.3em, fill = black},
+		[every node/.style={draw,circle,inner sep = 0em, minimum size = 1.2em},
 		 edgelabel/.style = {fill = white, inner sep = 0.1em, font=\small}]
 		\graph[clockwise, radius = 2cm, phase = 0, empty nodes]{subgraph I_n[n = 8, name = A]};
-		\node[label={$a$}] (a) at (A 7) {};
+		
+		\node at (A 7) {a};
+		\node at (A 8) {b};
+		\node at (A 1) {c};
+		\node at (A 2) {d};
+		\node at (A 3) {e};
+		\node at (A 4) {f};
+		\node at (A 5) {g};
+		\node at (A 6) {h};
 		
 		\draw[-{>[length=5, width=5]}] (A 1) to (A 7);
 		\draw[-{>[length=5, width=5]}] (A 1) to (A 2);
