--- a/src/linalg_zh_gyak.tex
+++ b/src/linalg_zh_gyak.tex
@@ -61,6 +61,12 @@
                     \]
                 \end{subfigure}
             \end{figure}
+            \item \textbf{[BSZ1-ZH-2014]} Döntsük el, hogy a $p$ valós paraméter milyen értékeire van megoldása az alábbi egyenletrendszernek. Ha van megoldás, adjuk is meg az öszeset.
+            \begin{align*}
+                x_1 - x_2 + 4x_4 &= -2 \\
+                2x_1 - 2x_2 + x_3 + 8x_4 &= -3 \\
+                x_1 + x_2 + 6x_3 + 8x_4 &= 2 \\
+                3x_1 - 3x_2 + p \cdot x_3 + (p^2 + p + 12)\cdot x_4 &= -6
+            \end{align*}
         \end{enumerate}
-
     \end{document}
